--- a/.eslintrc
+++ b/.eslintrc
@@ -1,6 +1,7 @@
 {
   "extends": ["react-app", "airbnb", "prettier", "prettier/react"],
   "plugins": ["prettier"],
+  "root": true,
   "rules": {
     "prettier/prettier": "error",
     "react/jsx-filename-extension": "error",
